Bug 140856 - Some listboxes no longer rendered correctly due to new inset margins on macOS
Summary: Some listboxes no longer rendered correctly due to new inset margins on macOS
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.2.0.0.alpha0+
Hardware: All macOS (All)
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2021-03-07 12:04 UTC by Thorsten Wagner
Modified: 2021-03-07 18:25 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot 1 (125.22 KB, image/png)
2021-03-07 12:04 UTC, Thorsten Wagner
Details
Screenshot 2 (141.20 KB, image/png)
2021-03-07 12:05 UTC, Thorsten Wagner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thorsten Wagner 2021-03-07 12:04:07 UTC
Description:
An inset margin has been added within listboxes. This change seem to cause some listboxes no longer rendererd correctly (see screenshots attched for examples). Issue exists on macOS at least. Not sure whether this is caused by 5e75b7ca828954f9a23d7a3e8c3be3e0934210b3.

Steps to Reproduce:
1. Open Writer's sidebar
2. Select character style or paragraph style list boxes for examples

Actual Results:
Listboxes are not rendered correctly (bottom margin in screenshot 1, black frame in screenshot 2).

Expected Results:
Listboxes are rendered without margin overflows and unintended black frames (possibile symptoms mentioned here may be incomplete).


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.2.0.0.alpha0+ / LibreOffice Community
Build ID: 3d008f3bcd19a74cff0781cbd9a3d173892553cf
CPU threads: 8; OS: Mac OS X 10.15.7; UI render: default; VCL: osx
Locale: de-DE (en_US.UTF-8); UI: en-US
Calc: threaded
Comment 1 Thorsten Wagner 2021-03-07 12:04:53 UTC
Created attachment 170305 [details]
Screenshot 1
Comment 2 Thorsten Wagner 2021-03-07 12:05:12 UTC
Created attachment 170306 [details]
Screenshot 2
Comment 3 Commit Notification 2021-03-07 17:50:15 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/901fee94302e1b6366a5df2859f1f13ff0c4afca

tdf#140856 macOS listbox rendering

It will be available in 7.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.