tdf#140856 macOS listbox rendering

Change-Id: Ib5d4af162da7264d9e6da8742e36c194448bd1fd